--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build-client": "cd client && npm run build",
-    "install-client": "cd client && npm install",
+    "install-client": "cd app && cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build-client",
     "server": "nodemon server --ignore client",
     "client": "npm start --prefix client",
