--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+    "version": 3,
     "builds":[
         {
             "src":"./server.js",
@@ -7,8 +8,8 @@
     ],
     "routes":[
         {
-            "src":"/.*",
-            "dest":"server.js"
+            "src":"/(.*)",
+            "dest":"/"
         }
     ]
 }
