--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 3,
     "builds":[
         {
-            "src":"./server.js",
+            "src":"server.js",
             "use":"@vercel/node"
         }
     ],
