--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build-client": "cd client && npm run build",
-    "install-client": "cd app && cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build-client",
-    "server": "nodemon server --ignore client",
-    "client": "npm start --prefix client",
-    "start": "concurrently --kill-others-on-fail \"npm run server\" \" npm run client\""
+    "server": "nodemon index",
+    "start": "node index"
+    
   },
   "keywords": [],
   "author": "",
